<resources>
    <string name="app_name">signupandregister</string>
    <string name="ProbeID">Probe ID</string>
    <string name="pwd">Password</string>
    <string name="gender">Gender</string>
    <string name="yearofstudy">Year Of Study</string>
    <string name="department">Department</string>
    <string name="collegename">College Name</string>
    <string name="confirmpwd">Confirm password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="acconeeded">Accomodation Needed?</string>
    <string name="email">Email ID</string>
    <string name="fgtpwd"><u>Forgot your password?</u></string>
    <string name="register"><u>Don\'t have a Probe account? Register here</u></string>
    <string name="signin">Sign In</string>
    <string name="regsuccess">Registration \n\n Successful!</string>
    <string name="checkemail">Please check your email for your Probe ID</string>
    <string name="aboutUsP1">PROBE is the Annual International\n
Technical Symposium of the\nDepartment of ECE, NIT Trichy.</string>
    <string name="aboutUsP2">PROBE is the biggest ECE symposium in India,\n
        where it creates a learning platform in\nthe latest fields and trends\nrelated to electronics and communication.
    </string>
    <string name="scrolltochoose">Scroll and choose destination, click the ballon marker to get directions icon at the bottom right. Choose the icon for navigating there! </string>


</resources>
