

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:orientation="vertical"
    android:background="@drawable/untitledproject_1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="35dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="true"
        app:hintTextAppearance="@style/TextAppearancewhite"
        android:textColorHint="#000000"
        android:id="@+id/prb1"
        android:layout_marginLeft="10dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/ProbeID"
            android:id="@+id/prb2"
            android:paddingLeft="10dp"
            android:background="@drawable/roundcornerbutton"
            android:paddingTop="15dp"

            android:focusable="true"
            android:focusableInTouchMode="true"


            />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="true"
        app:hintTextAppearance="@style/TextAppearancewhite"
        android:textColorHint="#000000"
        android:id="@+id/prb3"
        android:layout_marginLeft="10dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/pwd"
            android:id="@+id/prb4"
            android:paddingLeft="10dp"
            android:background="@drawable/roundcornerbutton"
            android:paddingTop="15dp"
            android:inputType="textPassword"
            android:focusable="true"
            android:focusableInTouchMode="true"


            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:clickable="true"
        android:onClick="pwdfgtfn"
        android:layout_marginLeft="13dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14dp"
        android:text="@string/fgtpwd"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="12dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcornerbutton"
            android:paddingLeft="4dp"
            android:onClick="signinfn"
            android:paddingRight="4dp"
            android:text="@string/signin"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="18dp"
            android:onClick="regfn"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="16dp" />



    </LinearLayout>

</LinearLayout>