<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@drawable/group14"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:layout_height="wrap_content"
        tools:context=".register">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Texterror"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearancewhite"
            android:textColorHint="#000000"
            android:id="@+id/id_lay"
            android:layout_marginLeft="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:layout_marginTop="50dp"
                android:focusedByDefault="false"
                android:hint="@string/ProbeID"
                android:nextFocusForward="@+id/pwd_text"
                android:id="@+id/id_txt"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:background="@drawable/roundcornerbutton"
                android:gravity="center_vertical"



                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearancewhite"
            android:textColorHint="#000000"
            android:id="@+id/pwd_layout"
            app:errorTextAppearance="@style/Texterror"
            android:layout_marginLeft="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/pwd"
                android:id="@+id/pwd_text"
                android:nextFocusForward="@+id/cnfpwd_text"
                android:paddingLeft="10dp"
                android:imeOptions="actionNext"
                android:background="@drawable/roundcornerbutton"
                android:inputType="textPassword"
                android:gravity="center_vertical"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearancewhite"
            android:textColorHint="#000000"
            android:id="@+id/cnfpwd_layout"
            app:errorTextAppearance="@style/Texterror"
            android:layout_marginLeft="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/confirmpwd"
                android:id="@+id/cnfpwd_text"
                android:paddingLeft="10dp"
                android:imeOptions="actionDone"
                android:background="@drawable/roundcornerbutton"
                android:inputType="textPassword"
                android:gravity="center_vertical"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcornerbutton"
                android:padding="4dp"
                android:onClick="forgetpwdentry"
                android:text="Change"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
