<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@drawable/group14"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="14dp"
    android:layout_height="wrap_content"
    tools:context=".register">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Texterror"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearancewhite"
            android:textColorHint="#000000"
            android:id="@+id/namelayout"
            android:layout_marginLeft="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:layout_marginTop="50dp"
                android:focusedByDefault="false"
                android:hint="Name"
                android:nextFocusForward="@+id/emailtext"
                android:id="@+id/nametxt"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:background="@drawable/roundcornerbutton"
                android:gravity="center_vertical"



                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearancewhite"
            android:textColorHint="#000000"
            android:id="@+id/emaillayout"
            app:errorTextAppearance="@style/Texterror"
            android:layout_marginLeft="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                android:id="@+id/emailtext"
                android:nextFocusForward="@+id/pwdtext"
                android:paddingLeft="10dp"
                android:imeOptions="actionNext"
                android:background="@drawable/roundcornerbutton"
                android:inputType="textEmailAddress"
                android:gravity="center_vertical"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearancewhite"
            android:textColorHint="#000000"
            android:id="@+id/pwdlayout"
            app:errorTextAppearance="@style/Texterror"
            android:layout_marginLeft="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:imeOptions="actionNext"
                android:hint="@string/pwd"
                android:nextFocusForward="@+id/cnfpwdtext"
                android:id="@+id/pwdtext"
                android:paddingLeft="10dp"
                android:background="@drawable/roundcornerbutton"
                android:inputType="textPassword"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"

                />
</com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginRight="10dp"
                android:focusableInTouchMode="true"
                app:hintTextAppearance="@style/TextAppearancewhite"
                android:textColorHint="#000000"
                android:id="@+id/cnfpwdlayout"
                app:errorTextAppearance="@style/Texterror"
                android:layout_marginLeft="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/confirmpwd"
                    android:imeOptions="actionDone"
                    android:id="@+id/cnfpwdtext"
                    android:paddingLeft="10dp"
                    android:background="@drawable/roundcornerbutton"
                    android:inputType="textPassword"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"

                    />
            </com.google.android.material.textfield.TextInputLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Gender"
    android:layout_marginLeft="14dp"
    style="@style/TextAppearancewhite"
    android:layout_marginBottom="12dp"/>
<RadioGroup
    android:layout_width="match_parent"
    android:layout_marginLeft="14dp"
    android:layout_height="wrap_content"
    android:id="@+id/genderradgrp"
    android:orientation="horizontal"
    >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FFFFFF"
        android:text="Male"
        android:id="@+id/genbox1"
        android:textSize="15dp"
        android:textColor="#FFFFFF"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="Female"
        android:id="@+id/genbox2"
        android:buttonTint="#FFFFFF"
        android:textColor="#FFFFFF"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:id="@+id/genbox3"
        android:text="Other"
        android:buttonTint="#FFFFFF"
        android:textColor="#FFFFFF"/>

</RadioGroup>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="true"
        app:hintTextAppearance="@style/TextAppearancewhite"
        android:textColorHint="#000000"
        android:id="@+id/yearofstudylayout"
        app:errorTextAppearance="@style/Texterror"
        android:layout_marginLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/yearofstudy"
            android:nextFocusForward="@+id/depttext"
            android:id="@+id/yearofstudytext"
            android:paddingLeft="10dp"
            android:background="@drawable/roundcornerbutton"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="true"
        app:hintTextAppearance="@style/TextAppearancewhite"
        android:textColorHint="#000000"
        android:id="@+id/deptlayout"
        app:errorTextAppearance="@style/Texterror"
        android:layout_marginLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/department"
            android:id="@+id/depttext"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/clgtext"
            android:paddingLeft="10dp"
            android:background="@drawable/roundcornerbutton"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="true"
        app:hintTextAppearance="@style/TextAppearancewhite"
        android:textColorHint="#000000"
        android:id="@+id/clglayout"
        app:errorTextAppearance="@style/Texterror"
        android:layout_marginLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/collegename"
            android:id="@+id/clgtext"
            android:nextFocusForward="@+id/phnotext"
            android:paddingLeft="10dp"
            android:imeOptions="actionNext"
            android:background="@drawable/roundcornerbutton"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="true"
        app:hintTextAppearance="@style/TextAppearancewhite"
        android:textColorHint="#000000"
        android:id="@+id/phnolayout"
        app:errorTextAppearance="@style/Texterror"
        android:layout_marginLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:imeOptions="actionDone"
            android:hint="@string/phonenumber"
            android:id="@+id/phnotext"
            android:paddingLeft="10dp"
            android:maxLength="10"
            android:background="@drawable/roundcornerbutton"
            android:inputType="phone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accomodation Needed"
        android:layout_marginLeft="14dp"
        style="@style/TextAppearancewhite"
        android:layout_marginBottom="12dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/accordgrp"

        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:id="@+id/accobox1"
            android:text="Yes"
            android:textSize="15dp"
            android:textColor="#FFFFFF"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/accobox2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15dp"
            android:text="No"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"/>

    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/roundcornerbutton"
        android:paddingLeft="4dp"
        android:onClick="registerfn"
        android:paddingRight="4dp"
        android:text="Register"
        android:id="@+id/reg_button"
        android:padding="4dp"
        android:layout_marginBottom="30dp"
        android:textColor="#000000" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:id="@+id/wait_spin"
        />

</LinearLayout>
</ScrollView>